JNDI configuration for Postgres and Mongo, added project description